finished the kendo equipment overview page and fixed the error of the fade in text overlapping dropdown menu

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ span{
 
 p {
   margin: 10px;
+  text-align: left;
 }
 .navbar{
   position:relative
@@ -73,6 +74,16 @@ p {
   align-items: center;
 }
 
+
+[data-aos] {
+  pointer-events: none;
+}
+.aos-animate {
+  pointer-events: auto;
+}
+.aos-init[data-aos][data-aos].aos-animate {
+  transform: unset;
+}
 
 .arrow::after {
   content: "";
